# python-perf-comparison

./: README.md  benchmark.py  execution_times_comparison.html  performance_improvement_comparison.html  pyproject.toml  sum_of_squares.py
c-ext/: c_ext_test.py  setup.py  sum_of_squares.c
cython/: cython_test.py  setup.py  sum_of_squares.c  sum_of_squares.pyx
numba/: numba_test.py
rust_pure/: Cargo.toml
rust_pure/src/: main.rs
rust_python/: Cargo.toml  rust_python_test.py
rust_python/src/: lib.rs
