[tool.poetry]
name = "python-optimize"
version = "0.1.0"
description = ""
authors = ["Evan Febrianto <van.evanfebrianto@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
cython = "^3.0.10"
setuptools = "^72.1.0"
numba = "^0.60.0"
maturin = "^1.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
